# ThermoFlex-Python-API

./: .gitignore  Dockerfile  README.md  Test.py  scratch.py  scratch2.py  test-serial.py  untitled0.py
python-serial/: Getting Started.md  INSTALL INSTRUCTIONS  Installation instructions for the thermoflex API.md  README.md  Testsess.py  niti-train-program.py  pyproject.toml  send-packet.py  tfnode-messages.proto
python-serial/ThermoflexSessions/session1/: pyvenv.cfg
python-serial/getting-started/: Getting Started.md  README.md
python-serial/node-communication/: pyproject.py  setup.py  tfnode-messages.proto
python-serial/scratch/: create_sess_csv.py  logformat.txt  midtermDemo.py  niti-train-program.py  scratch.py  scratch2.py  send-packet.py
python-serial/src/thermoflex/: __init__.py  controls.py  devices.py  network.py  sessions.py
python-serial/src/thermoflex.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python-serial/staging/: Installation instructions for the thermoflex API.md
python-serial/staging/src/: __init__.py  controls.py  nodetestingscript.py  sessions.py
python-serial/test/: Testfilesystem.py  Testsess.py  demo_day.py
python-serial/testing/src/: __init__.py  controls.py  devices.py  network.py  sessions.py
python-serial/testout/: midtermDemo.py
python-serial/testsource/: commands.py  controls.py  midtermDemo.py  sessions.py  update notes
python-serial/thermoflex/: README_QUICK.md  pyproject.py  setup.py  tfnode-messages.proto
python-serial/thermoflex/tf-src/: commands.py
python-serial/workbuild/: README_QUICK.md
(+63 files in other folders)
