[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "thermoflex"
version = "0.0.3"
authors = [{name = "Marvin Stephens", email = "marvin.stephens44@yahoo.com"}, {name = "Mark D", email = "mark@deltaroboticsinc.com"}]
readme = "README.md"
dependencies = ['pyserial == 3.5','protobuf == 5.28.3', 'pandas == 2.2.3']
description = "This is the library for controlling the ThermoFlex muscle system by Delta Robotics"
keywords = ["thermoflex" , "Delta", "Delta Robotics"]
requires-python = ">= 3.8"
